# arabic-tachkil

./: README.md  api_output_final.txt  api_output_fixed.txt  api_output_utf8.txt  app.py  check_stanza_ar.py  debug_log.txt  pyproject.toml  requirements-ml.txt - Optional ML dependencies  requirements.txt  test_api.py  test_asmai.py  test_dialect.py  test_log.py  test_nlp.py  test_stanza.py  test_stanza_fixed.py  verify_stanza_api.py
.streamlit/: config.toml
adawat/: adaat.py  config.py  dependencies.py
adawat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adawat/extractors/: entities.py
adawat/formatters/: data.py
adawat/generators/: affixation.py  randtext.py
adawat/nlp/: advanced_nlp.py  dialect.py  dialect_sentiment.py  lexicon_sentiment.py  sentiment.py  stemming.py  tagging.py  tashkeel.py
api/: main.py
pages/: system_status.py
static/: index.html  style.css
tests/: test_api.py  test_nlp.py
